added unrestricted vendors, --load_all option to load_fpds command

--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -7,7 +7,9 @@
             <span class="select_text">Select a vehicle</span>
         <form id="vehicle-select" class="pure-form">
             <select id="placeholder" class="vehicle_select_style">
-                <option>OASIS SB</option>
+                <option value="">Select a Vehicle</option>
+                <option value="oasissb">OASIS SB</option>
+                <option value="oasis">OASIS Unrestricted</option>
             </select>
         </form>
     </div><!--end vehicle_select<!-->
