--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -585,6 +585,19 @@ a.pool_link {
     float:left;
     font-weight:600;
 }
+.vendor_website   {
+    float:left;
+    margin-left:10px;
+    padding-right:8px;
+    padding-top:10px;
+    background:url(/static/mirage_site/images/external_link.png);
+    background-repeat: no-repeat;
+    background-position: 64px 14px;
+    height:35px;
+    width:80px;
+    vertical-align: text-bottom;
+    color:#83b1d6;
+}
 .debarred_status    {
     display:none;
     font-size:1.6em;
