added NAICS column to contract list

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -115,6 +115,9 @@
                         <td class="h_status">
                             Status
                         </td>
+                        <td class="h_naics">
+                            NAICS
+                        </td>
                     </tr>
                 </table>
             </div>
