display/hide small business badge

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -684,13 +684,9 @@ a.pool_link {
     margin-left:20px;
 }
 #sb_badge   {
+    display: none;
     float:right;
 }
-
-
-
-
-
 
 #no_matching_contracts  {
     font-size: 1.5em;
