added link to vendor site

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -17,7 +17,7 @@
         
         <div id="vendor_title_status_container">
 	        <div class="vendor_title"></div>
-            <div class="vendor_website"><a href="#">website</a></div>
+            <div class="vendor_website"><a id="vendor_site_link" href="#">website</a></div>
 	        <div class="debarred_status"> <<< WARNING: DEBARRED!</div>
         </div><!--end vendor_title_status_container<!-->
 
