--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -865,11 +865,13 @@ a.pool_link {
 .contracthistory table{
     border-collapse: collapse;
         border-spacing: 0;
-    width:100%;
+    width:1085px;
     height:100%;
     margin:0px;padding:0px;
+    table-layout: fixed;
 
-}.contracthistory tr:hover td{
+}
+.contracthistory tr:hover td{
     background-color:#eeeeee;
 }
 .contracthistory td{
