closes #198. added click event in url-manager to handle routing for back to search results

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -4,7 +4,7 @@
 {% block header %}
 <div id="combined_search_pool">
 
-    <a href="javascript:history.go(-1)"><div id="vendor_back_button">
+    <a href="#"><div id="vendor_back_button">
         <span class="back_text">Back to search results</span>
     </div></a>
 
