--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -11,6 +11,8 @@
 
         <script type="text/javascript" src="{% static "mirage_site/js/jquery-1.11.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
+         <script type="text/javascript" src="{% static "mirage_site/js/jquery.fireOnDisable.js" %}"></script>
+
         <script type="text/javascript" src="{% static "mirage_site/js/history.js/scripts/bundled/html4+html5/jquery.history.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/input-handler.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/requests-manager.js" %}"></script>
