--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -129,6 +129,13 @@
         
         <div id="no_matching_contracts">There are no matching contracts to display</div>
 
+        <div id="viewing_contracts">
+            viewing 
+            <span class="viewing_contracts_current">700 - 799</span>
+            of
+            <span class="viewing_contracts_total">4,356</span>
+            total results
+        </div><!--end viewing_contracts<!-->
         <div id="pagination_container"></div>
 
         </div><!--end vendor_contract_history_container<!-->
