added row numbers to pagination

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -998,6 +998,7 @@ a.pool_link {
     padding:13px;
     padding-left:0px;
     color:#666;
+    display: none;
 }
 .viewing_contracts_current {
     color:#000;
