--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -131,9 +131,9 @@
 
         <div id="viewing_contracts">
             viewing 
-            <span class="viewing_contracts_current">700 - 799</span>
+            <span id="contracts_current" class="viewing_contracts_current"></span>
             of
-            <span class="viewing_contracts_total">4,356</span>
+            <span id="contracts_total" class="viewing_contracts_total"></span>
             total results
         </div><!--end viewing_contracts<!-->
         <div id="pagination_container"></div>
