added 'number of contracts' column in listings

--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -29,6 +29,9 @@
                         <td class="h_vendor_location">
                             Location
                         </td>
+                        <td scope="col" class="h_naics_results">
+                            No. of Contracts
+                        </td>
                         <td class="h_8a">
                             8(a)
                         </td>
