added alt tags to footer images. fixes #266

--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -98,8 +98,8 @@
                 </div><!--end footer_nav<!-->
 
 
-                <a href="https://18f.gsa.gov"><div class="logo1"><img src="/static/mirage_site/images/logo-18f.png"></div></a>
-                <a href="http://www.gsa.gov"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
+                <a href="https://18f.gsa.gov"><div class="logo1"><img src="/static/mirage_site/images/logo-18f.png" alt="18F logo"></div></a>
+                <a href="http://www.gsa.gov" alt="GSA logo"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
             </div><!--end footer<!-->
 
         <style>
