--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -30,7 +30,7 @@
             <form id="setaside-filters" class="pure-form pure-form-stacked">
                 <fieldset>
                     <div id="filter_c1">
-                        <label class="pure-checkbox" for="8a"><input class="se_filter" type="checkbox" id="8a" name="8a" value="A6" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
+                        <label class="pure-checkbox" for="8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
                         <label class="pure-checkbox" for="Hubz"><input class="se_filter" type="checkbox" id="Hubz" name="Hubz" value="XX" {% if "XX" in request.GET.setasides %}checked{% endif %} />HUBZone</label>
                         <label class="pure-checkbox" for="disvet"><input class="se_filter" type="checkbox" id="disvet" name="disvet" value="QF" {% if "QF" in request.GET.setasides %}checked{% endif %}/>Service Disabled<br> Veteran Owned</label>
                     </div>
