--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -6,7 +6,7 @@
     <div id="vehicle_select">
             <span class="select_text">Select a vehicle</span>
         <form id="vehicle-select">
-            <select id="placeholder" class="vehicle_select_style">
+            <select id="placeholder" class="vehicle_select_style pure-form">
                 <option value="">Select a Vehicle</option>
                 <option value="oasissb">OASIS SB</option>
                 <option value="oasis">OASIS Unrestricted</option>
