--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -61,7 +61,8 @@
             <div id="header">
             <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
-                    <a href="/"><span class="oasis_title">MIRAGE</span></a>
+                    <div class="logo"><img src="/static/mirage_site/images/logo.png"></div>
+                    <a href="/"><div class="oasis_title"><img src="/static/mirage_site/images/mirage.png"></div></a>
                     <span class="oasis_subtitle">OASIS Market Research</span>
 
                 </div><!--end page_title<!-->
