--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         
         <title>Mirage</title>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,500,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
         <script type="text/javascript" src="{% static "mirage_site/js/jquery-1.11.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "mirage_site/js/select2.min.js" %}"></script>
