--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -57,7 +57,7 @@
     <body>
 
         <div id="container">
-
+            <a href="#skip" class="offscreen">Skip Content</a>
             <div id="header">
             <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
@@ -70,7 +70,7 @@
 
             </div><!--end header<!-->
 
-            
+            <a name="skip" > </a >
             {% block body %}
             {% endblock body %}
 
