fixes issue #271 headers for SAM & FPDS

--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -30,13 +30,13 @@
             <div id="data_sources_last_updated">last updated</div>
 
             <div class="data_sources_row">
-                <span class="data_source_name">SAM</span>
+                <h4 class="data_source_name">SAM</h4>
                 <span id="data_source_date_sam"></span>
                 <span class="data_source_description"><br>We pull SAM data directly from the System for Award Management (SAM) to provide supplemental information on all of the vendors in OASIS, including their SAM registration date, any potential suspensions or debarments, and the NAICS codes that a vendor may contract under.</span>
             </div><!--end data_sources_row<!-->
 
             <div class="data_sources_row">
-                <span class="data_source_name">FPDS</span>
+                <h4 class="data_source_name">FPDS</h4>
                 <span id="data_source_date_fpds"></span>
                 <span class="data_source_description"><br>Mirage loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each OASIS vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
             </div><!--end data_sources_row<!-->
