--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -18,6 +18,14 @@ h3 {
     font-weight: 100;
     margin:0em;
 }
+h4 {
+    display: inline-block;
+    float:left;
+    margin:0em;
+    font-weight: 700;
+    color:#4A84A3;
+
+}
 /* LAYOUT CSS */
 .pure-img-responsive {
     max-width: 100%;
@@ -281,10 +289,6 @@ h3 {
     border-bottom: 1px solid #eeeeee;
 }
 .data_source_name   {
-    display:block;
-    color:#640016;
-    font-weight: 600;
-    float:left;
 
 }
 .data_sources_row   {
