updates and closes issues 265, 262, 263,  starts 267 and 259

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -91,36 +91,36 @@
         		<span class="vendor_contract_history_text">Showing this vendor's contract history for: </span>
         		<!-- <span class="vendor_contract_history_naics"></span> -->
 
-                    <a href="#"><div id="naics_contracts_button" class="contracts_button">NAICS 12345</div></a>
-                    <a href="#"><div id="all_contracts_button" class="contracts_button">All Contracts</div></a>
+                    <a href="#" title="load this vendor's contract history for this NAICS in the table below"><div id="naics_contracts_button" class="contracts_button">NAICS 12345</div></a>
+                    <a href="#" title="load this vendor's contract history for all past contracts in the table below"><div id="all_contracts_button" class="contracts_button">All Contracts</div></a>
         	</div><!--end vendor_contract_history_title_container<!-->
 
         	
         		<div id="ch_table" class="contracthistory">
                 <table>
                     <tr>
-                        <th scope="col" class="h_date_signed arrow-down sortable">
+                        <th scope="col" class="h_date_signed arrow-down sortable" tabindex=“0” title="Date Signed, sorted descending, select to sort ascending">
                             Date Signed
                         </th>
-                        <th scope="col" class="h_piid">
+                        <th scope="col" class="h_piid" tabindex=“0” title="PIID">
                             PIID
                         </th>
-                        <th scope="col" class="h_agency arrow-sortable sortable">
+                        <th scope="col" class="h_agency arrow-sortable sortable" tabindex=“0” title="Agency, select to sort">
                             Agency
                         </th>
-                        <th scope="col" class="h_type">
+                        <th scope="col" class="h_type" tabindex=“0” title="Type">
                             Type
                         </th>
-                        <th scope="col" class="h_value arrow-sortable sortable">
+                        <th scope="col" class="h_value arrow-sortable sortable" tabindex=“0” title="Value, select to sort">
                             Value ($)
                         </th>
-                        <th scope="col" class="h_email_poc">
+                        <th scope="col" class="h_email_poc" tabindex=“0” title="Email POC">
                             Email POC
                         </th>
-                        <th scope="col" class="h_status arrow-sortable sortable">
+                        <th scope="col" class="h_status arrow-sortable sortable" tabindex=“0” title="Status, select to sort">
                             Status
                         </th>
-                        <th scope="col" class="h_naics">
+                        <th scope="col" class="h_naics" tabindex=“0” title="NAICS">
                             NAICS
                         </th>
                     </tr>
