--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -253,6 +253,15 @@ h4 {
 #filter label input  {
     padding-right:5px !important; 
 }
+
+.filter_text {
+    color: #ffffff;
+}
+
+.filter_text_disabled {
+    color: #999999;
+}
+
 .labeltest  {
     margin-left:px;
 }
@@ -575,9 +584,17 @@ a.pool_link {
 #pool_table .pooldetail .vendor_name tr:hover td{
     background-color:#eeeeee;
 }
-.pure-checkbox  {
+.pure-checkbox {
     padding-bottom:3px;
 }
+.pure-checkbox-enabled {
+    padding-bottom:3px;
+    color: #ffffff;
+}
+.pure-checkbox-disabled {
+    color: #999999;
+}
+
 /* Vendor Detail Styles */
 #breadcrumb_container   {
     border-top:1px solid #e3e5e9;
