--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -99,28 +99,28 @@
         		<div id="ch_table" class="contracthistory">
                 <table>
                     <tr>
-                        <th scope="col" class="h_date_signed arrow-down sortable" title="Sorted descending">
+                        <th scope="col" class="h_date_signed arrow-down sortable" title="Sorted descending" tabindex="0">
                             Date Signed
                         </th>
-                        <th scope="col" class="h_piid" title="Select to sort">
+                        <th scope="col" class="h_piid">
                             PIID
                         </th>
-                        <th scope="col" class="h_agency arrow-sortable sortable" title="Select to sort">
+                        <th scope="col" class="h_agency arrow-sortable sortable" title="Select to sort" tabindex="0">
                             Agency
                         </th>
-                        <th scope="col" class="h_type" title="Select to sort">
+                        <th scope="col" class="h_type">
                             Type
                         </th>
-                        <th scope="col" class="h_value arrow-sortable sortable" title="Select to sort">
+                        <th scope="col" class="h_value arrow-sortable sortable" title="Select to sort" tabindex="0">
                             Value ($)
                         </th>
-                        <th scope="col" class="h_email_poc" title="Select to sort">
+                        <th scope="col" class="h_email_poc">
                             Email POC
                         </th>
-                        <th scope="col" class="h_status arrow-sortable sortable" title="Select to sort">
+                        <th scope="col" class="h_status arrow-sortable sortable" title="Select to sort" tabindex="0">
                             Status
                         </th>
-                        <th scope="col" class="h_naics" title="Select to sort">
+                        <th scope="col" class="h_naics">
                             NAICS
                         </th>
                     </tr>
