--- a/mirage_site/templates/search_base.html
+++ b/mirage_site/templates/search_base.html
@@ -7,7 +7,7 @@
             <span class="select_text">Select a vehicle</span>
         <form id="vehicle-select">
             <select id="placeholder" class="vehicle_select_style" title="select_a_vehicle">
-                <option value="">Select a Vehicle</option>
+                <option></option>
                 <option value="oasissb">OASIS SB</option>
                 <option value="oasis">OASIS Unrestricted</option>
             </select>
