--- a/mirage_site/templates/pool.html
+++ b/mirage_site/templates/pool.html
@@ -3,7 +3,7 @@
 
 {% block search_info %}
         <div id="results_pool_name_number">
-            <span class="results_pool_name_number_search">search results:</span><br>
+            <span class="results_pool_name_number_search">SEARCH RESULTS</span><br>
             <span class="results_pool_name_number_pool"></span>
             <span class="results_pool_name_number_description"></span>
 
@@ -12,14 +12,16 @@
         </div><!--end number_of_results<!-->
              <a id="csv_link" href="#"><div id="download_data_results">download data (CSV)</div></a>
         </div><!--end results_pool_name_number<!-->
+
+        <div id="your_search_criteria">
+            <span class="your_search_grey">showing vendors in: </span><span id="your_search" class="your_search_blue"></span>
+            <span class="your_search_grey">filters: </span><span id="your_filters" class="your_search_blue"></span>
+        </div> <!-- closes your search criteria -->
+
 {% endblock %}
 
 {% block content %}
-<div id="your_search_criteria">
-    <span class="your_search_grey">showing vendors in: </span><span id="your_search" class="your_search_blue"></span>
 
-    <span class="your_search_grey">filters: </span><span id="your_filters" class="your_search_blue"></span>
-</div>
 <div id="pool_table" class="pooldetail">
                 <table id="pool_vendors">
                     <tr>
