--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -121,7 +121,7 @@
                     </div><!--end call_to_action<!-->
 
                     <div class="logo_container">
-                        <div class="built_by">Built by:</div>
+                        <div class="built_by">Built by</div>
                         <a href="https://18f.gsa.gov"><div class="logo1"><img src="/static/mirage_site/images/logo-18f.png" alt="18F logo"></div></a>
                         <a href="http://www.gsa.gov" alt="GSA logo"><div class="logo2"><img src="/static/mirage_site/images/gsa_logo.jpg"></div></a>
                     </div>
